Archive2/83/eaa450c1445b42/main.cpp
struct foo { template<typename X> int bar() { return 0; } };

template<typename>
foo f;

template<typename... Xs>
void bar()
{
    int i[] = { f<Xs>.bar()... };
}

int main()
{
    bar<void, void, void>();
}
